policies/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-tag
      match:
        any:
          - resources:
              kinds: [Pod]
      validate:
        message: "latest image tag is not allowed"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
